* feat(chart.component.html): add chart component template * feat(chart.component.scss): add chart component styles * feat(chart.component.ts): add chart component logic * fix(generate-plan.component.html): fix confirm plan button visibility * fix(generate-plan.component.ts): fix incrementDays and decrementDays methods * feat(stats.component.html): add stats component template * feat(stats.component.ts): add stats component logic * feat(global.scss): add font-size classes

--- a/cent-sense/src/global.scss
+++ b/cent-sense/src/global.scss
@@ -302,5 +302,23 @@
   border-left: .2rem solid;
 }
 
+.font-size-1 {
+  font-size: 0.75rem;
+}
 
+.font-size-2 {
+  font-size: 0.875rem;
+}
+
+.font-size-3 {
+  font-size: 1rem;
+}
+
+.font-size-4 {
+  font-size: 1.125rem;
+}
+
+.font-size-5 {
+  font-size: 1.25rem;
+}
 
